# MayakBot

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
notebooks/: build_vector_db.ipynb
src/bots/: MayakCopywriter.py  MayakMentor.py
src/parser/: main.py
src/rag/: chain.py
