[project]
name = "mayakbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "aiohttp-socks>=0.11.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.4",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
